src/objects/CustomObject1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ORK_number__c</fullName>
        <label>ORK例数（眼）</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPRK__c</fullName>
        <description>用于记录TransPRK手术类型的例数</description>
        <label>TPRK例数（眼）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>准分子手术量</relationshipLabel>
        <relationshipName>zfzssluCu8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>period__c</fullName>
        <description>用于记录手术量统计的时间段</description>
        <label>统计周期</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>price_list__c</fullName>
        <label>TPRK价格</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>shebei__c</fullName>
        <label>设备</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>准分子手术量</relationshipLabel>
        <relationshipName>D6X7</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>准分子手术量</label>
    <listViews>
        <fullName>All</fullName>
        <columns>shebei__c</columns>
        <columns>NAME</columns>
        <columns>ORK_number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>手术量统计年月（示例：201601）</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>准分子手术量</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>